--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="overlay"></div>
         <div class="carousel-caption d-flex flex-column justify-content-center">
           <h1>Harness the Power of the Sun</h1>
-          <p>With Surya AI, we bring the immense potential of solar energy right to your fingertips. Our cutting-edge technology analyzes solar generation potential at any location, empowering you to make informed decisions for a sustainable future. Discover how easy it is to transition to clean energy with our intuitive platform.</p>
+          <p>With Surya AI, we bring the immense potential of solar energy right to your fingertips. Our cutting-edge technology analyzes solar generation potential at any location, empowering you to make informed decisions for a sustainable future.</p>
           <a href="#learn-more" class="btn btn-outline-primary">Learn More</a>
         </div>
       </div>
@@ -62,7 +62,7 @@
         <div class="overlay"></div>
         <div class="carousel-caption d-flex flex-column justify-content-center">
           <h1>AI-Driven Insights for Solar Solutions</h1>
-          <p>Leverage artificial intelligence to maximize your solar energy potential. Surya AI provides tailored recommendations based on precise data, helping you optimize the placement of solar panels for maximum efficiency. Join the solar revolution and let our technology guide you toward smarter energy solutions.
+          <p>Leverage artificial intelligence to maximize your solar energy potential. Surya AI provides tailored recommendations based on precise data, helping you optimize the placement of solar panels for maximum efficiency.
 
           </p>
           <a href="#learn-more" class="btn btn-outline-primary">Learn More</a>
@@ -72,7 +72,7 @@
         <div class="overlay"></div>
         <div class="carousel-caption d-flex flex-column justify-content-center">
           <h1>Join the Solar Movement Today!</h1>
-          <p>Transitioning to solar energy has never been easier. Surya AI simplifies the process, offering a user-friendly interface and comprehensive support to get you started on your solar journey. Reduce your carbon footprint and save on energy costs—take the first step towards a brighter, greener tomorrow.
+          <p>Transitioning to solar energy has never been easier. Surya AI simplifies the process, offering a user-friendly interface and comprehensive support to get you started on your solar journey.
 
           </p>
           <a href="#learn-more" class="btn btn-outline-primary">Learn More</a>
